# A.L.F.R.E.D.v2.01

./: .coverage  .env  .pre-commit-config.yaml  AMAZON_POLLY_SETUP.md  BAT_CAVE_SETUP.md  CROSS_MACHINE_SETUP.md  README.md  TESTING.md  WEB_INTERFACE.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements-web.txt  requirements.txt  run_tests.py  start_web.py  test_web_interface.py
agent/core/: agent.py
coordinator/: agent_discovery.json  main.py  web_interface.py
coordinator/core/: coordinator.py
coordinator/voice/: interface.py
coordinator/web/: interface.py
coordinator/web/static/: script.js  style.css
coordinator/web/static/css/: bat-theme.css
coordinator/web/static/js/: bat-console.js  performance-monitor.js  voice-integration.js  voice-visualizer.js
coordinator/web/templates/: agents.html  base.html  command.html  dashboard.html  result.html
shared/: models.py
tests/: __init__.py  conftest.py
tests/integration/: test_models_integration.py
tests/unit/agent/: test_agent.py
tests/unit/coordinator/: test_coordinator.py  test_coordinator_core.py  test_voice_interface.py  test_web_interface.py
tests/unit/shared/: test_models.py
